tests/ui/const-generics/associated-const-bindings/dyn-compat-assoc-const-ty-mentions-self.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/dyn-compat-assoc-const-ty-mentions-self.rs:37:16
   |
LL |     let _: dyn Trait;
   |                ^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compat-assoc-const-ty-mentions-self.rs:17:11
   |
LL | trait Trait {
   |       ----- this trait is not dyn compatible...
...
LL |     const K: Self where Self: std::marker::ConstParamTy_;
   |           ^ ...because it contains associated const `K` whose type references the `Self` type
...
LL |     const Q: <Self as SomeOtherTrait>::Output;
   |           ^ ...because it contains associated const `Q` whose type references the `Self` type
   = help: consider moving `K` to another trait
   = help: consider moving `Q` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
